peac_dev/force-app/main/default/objects/Contract_Criteria__c/Contract_Criteria__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>created for the Collection Group Assignment</description>
    <label>Contract Criteria</label>
</CustomObject>