peac_dev/force-app/main/default/objects/Contract_Criteria__c/fields/Default_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Agent_Id__c</fullName>
    <description>Owner for Non-Delinquent Contracts OR in either Disposed or &quot;Disposed - Charged Off&quot; Status</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Agent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>