peac_dev/force-app/main/default/objects/Contract_Criteria__c/fields/Maximum_Balance_CBR__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Balance_CBR__c</fullName>
    <label>Maximum Balance CBR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>