peac_dev/force-app/main/default/objects/Contract_Criteria__c/fields/Maximum_CBR_XBS_ADR__c.field-meta.xml
<CustomField>
    <fullName>Maximum_CBR_XBS_ADR__c</fullName>
    <label>Maximum CBR (XBS, ADR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>